--- a/templates/index.html
+++ b/templates/index.html
@@ -10,19 +10,19 @@
         <form action='/predict' method="post" class="form">
             <h2>What is your score out of 800</h2>
             <input class="score"  type="text" class="floatLabel" name="score" value="">
-            <h2>Enter Percentage in Aptitude</h2>
+            <h2>Enter % in Aptitude</h2>
             <input class="aptitude"  type="text" class="floatLabel" name="aptitude" value="">
-            <h2>Enter Percentage in English</h2>
+            <h2>Enter % in English</h2>
             <input class="english"  type="text" class="floatLabel" name="english" value="">
-            <h2>Enter Percentage in Quantitative</h2>
+            <h2>Enter % in Quantitative</h2>
             <input class="quantitative"  type="text" class="floatLabel" name="quantitative" value="">
-            <h2>Enter Percentage in Analytical</h2>
+            <h2>Enter % in Analytical</h2>
             <input class="analytical"  type="text"  class="floatLabel" name="analytical" value="">
-            <h2>Enter Percentage in Domain</h2>
+            <h2>Enter % in Domain</h2>
             <input class="domain"  type="text" class="floatLabel" name="domain" value="">
-            <h2>Enter Percentage in Computer Fundamentals</h2>
+            <h2>Enter % in Computer Fundamentals</h2>
             <input class="compfund"  type="text"  class="floatLabel" name="compfund" value="">
-            <h2>Enter Percentage in Coding</h2>
+            <h2>Enter % in Coding</h2>
             <input class="coding"  type="text" class="floatLabel" name="coding" value="">
 
             <button class="submit" type="submit">Predict Placement</button>
